# torg

./: Cargo.toml  README.md  notes.org
.claude/skills/verify/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  structure.rs  timestamp.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: action.rs  app.rs  buffer.rs  main.rs  ui.rs
docs/: architecture.md  guide.md  install.md  milestone-2-tui.md  releasing.md  roadmap.md  tutorial.md  usage.md
docs/superpowers/plans/: 2026-07-12-structural-editing.md
docs/superpowers/specs/: 2026-07-12-structural-editing-design.md
ios/: .gitignore  README.md  build-rust.sh  project.yml
ios/TorgSpike/: ContentView.swift  TorgSpikeApp.swift
man/: torg.1
packaging/homebrew/: torg.rb.tmpl
